Fix code overflow

--- a/resources/css/_code.css
+++ b/resources/css/_code.css
@@ -15,6 +15,10 @@ pre code.torchlight .summary-caret {
     @apply mr-1;
 }
 
+p code {
+    @apply inline-flex max-w-full overflow-scroll
+}
+
 .tabbed-code {
     @apply my-5 bg-dark-500 rounded-md overflow-hidden;
 
